8308192: Error in parsing replay file when staticfield is an array of single dimension

Backport-of: d3feedf5114542078c10abec0612038c88e005d6